Add the ssh-baseline
Signed-off-by: Nathen Harvey <nharvey@chef.io>

--- a/baseline/.kitchen.yml
+++ b/baseline/.kitchen.yml
@@ -22,5 +22,7 @@ suites:
       - recipe[baseline::default]
     verifier:
       inspec_tests:
-        - test/smoke/default
+        - name: ssh-baseline
+          url: https://github.com/dev-sec/ssh-baseline/archive/master.tar.gz
+
     attributes:
