Add a wrapper profile
Signed-off-by: Nathen Harvey <nharvey@chef.io>

--- a/baseline/.kitchen.yml
+++ b/baseline/.kitchen.yml
@@ -22,7 +22,6 @@ suites:
       - recipe[baseline::default]
     verifier:
       inspec_tests:
-        - name: ssh-baseline
-          url: https://github.com/dev-sec/ssh-baseline/archive/master.tar.gz
+        - ../my-baseline
 
     attributes:
